Extend data model for STA and frontend extensions
