# app/templates/openapi.json
@@ -662,304 +662,6 @@
         }
       }
     },
-    "/device-properties": {
-      "get": {
-        "tags": [
-          "Device property"
-        ],
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/include"
-          },
-          {
-            "$ref": "#/components/parameters/page_size"
-          },
-          {
-            "$ref": "#/components/parameters/sort"
-          },
-          {
-            "name": "filter[measuring_range_min]",
-            "in": "query",
-            "required": false,
-            "description": "measuring_range_min attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[measuring_range_max]",
-            "in": "query",
-            "required": false,
-            "description": "measuring_range_max attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[failure_value]",
-            "in": "query",
-            "required": false,
-            "description": "failure_value attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[accuracy]",
-            "in": "query",
-            "required": false,
-            "description": "accuracy attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[label]",
-            "in": "query",
-            "required": false,
-            "description": "label attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[unit_uri]",
-            "in": "query",
-            "required": false,
-            "description": "unit_uri attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[unit_name]",
-            "in": "query",
-            "required": false,
-            "description": "unit_name attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[compartment_uri]",
-            "in": "query",
-            "required": false,
-            "description": "compartment_uri attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[compartment_name]",
-            "in": "query",
-            "required": false,
-            "description": "compartment_name attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[property_uri]",
-            "in": "query",
-            "required": false,
-            "description": "property_uri attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[property_name]",
-            "in": "query",
-            "required": false,
-            "description": "property_name attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[sampling_media_uri]",
-            "in": "query",
-            "required": false,
-            "description": "sampling_media_uri attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[sampling_media_name]",
-            "in": "query",
-            "required": false,
-            "description": "sampling_media_name attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[resolution]",
-            "in": "query",
-            "required": false,
-            "description": "resolution attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[resolution_unit_uri]",
-            "in": "query",
-            "required": false,
-            "description": "resolution_unit_uri attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[resolution_unit_name]",
-            "in": "query",
-            "required": false,
-            "description": "resolution_unit_name attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "name": "filter[device_id]",
-            "in": "query",
-            "required": false,
-            "description": "device_id attribute filter.",
-            "schema": {
-              "type": "string",
-              "format": "string",
-              "default": ""
-            }
-          },
-          {
-            "$ref": "#/components/parameters/id"
-          },
-          {
-            "$ref": "#/components/parameters/filter"
-          }
-        ],
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/DeviceProperty_coll1"
-          }
-        },
-        "description": "Retrieve DeviceProperty from device_property",
-        "operationId": "RetrieveacollectionofDevicePropertyobjects_0"
-      },
-      "post": {
-        "tags": [
-          "Device property"
-        ],
-        "requestBody": {
-          "$ref": "#/components/requestBodies/DeviceProperty_inst"
-        },
-        "responses": {
-          "201": {
-            "$ref": "#/components/responses/DeviceProperty_coll1"
-          }
-        },
-        "operationId": "CreateDeviceProperty_0"
-      }
-    },
-    "/device-properties/{device_property_id}": {
-      "get": {
-        "tags": [
-          "Device property"
-        ],
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/include"
-          },
-          {
-            "$ref": "#/components/parameters/device_property_id"
-          }
-        ],
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/DeviceProperty_coll1"
-          }
-        },
-        "description": "Retrieve DeviceProperty from device_property",
-        "operationId": "RetrieveDevicePropertyinstance_0"
-      },
-      "patch": {
-        "tags": [
-          "Device property"
-        ],
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/device_property_id"
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/vnd.api+json": {
-              "schema": {
-                "$ref": "#/components/schemas/DeviceProperty"
-              }
-            }
-          },
-          "description": "DeviceProperty attributes",
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/DeviceProperty_coll1"
-          }
-        },
-        "description": "Update DeviceProperty attributes",
-        "operationId": "UpdateDeviceProperty_0"
-      },
-      "delete": {
-        "tags": [
-          "Device property"
-        ],
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/device_property_id"
-          }
-        ],
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/object_deleted"
-          }
-        },
-        "operationId": "DeleteDevicePropertyfromdeviceproperty_1"
-      }
-    },
     "/generic-configuration-actions": {
       "get": {
         "tags": [
@@ -2711,117 +2413,6 @@
           }
         }
       },
-      "DeviceProperty_inst": {
-        "content": {
-          "application/vnd.api+json": {
-            "schema": {
-              "properties": {
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "attributes": {
-                      "type": "object",
-                      "properties": {
-                        "measuring_range_min": {
-                          "type": "integer",
-                          "format": "int64"
-                        },
-                        "measuring_range_max": {
-                          "type": "integer",
-                          "format": "int64"
-                        },
-                        "failure_value": {
-                          "type": "integer",
-                          "format": "int64"
-                        },
-                        "accuracy": {
-                          "type": "integer",
-                          "format": "int64"
-                        },
-                        "resolution": {
-                          "type": "integer",
-                          "format": "int64"
-                        },
-                        "label": {
-                          "type": "string"
-                        },
-                        "unit_uri": {
-                          "type": "string",
-                          "format": "uri"
-                        },
-                        "unit_name": {
-                          "type": "string"
-                        },
-                        "compartment_uri": {
-                          "type": "string",
-                          "format": "uri"
-                        },
-                        "compartment_name": {
-                          "type": "string"
-                        },
-                        "property_uri": {
-                          "type": "string",
-                          "format": "uri"
-                        },
-                        "property_name": {
-                          "type": "string"
-                        },
-                        "sampling_media_uri": {
-                          "type": "string",
-                          "format": "uri"
-                        },
-                        "sampling_media_name": {
-                          "type": "string"
-                        },
-                        "resolution_unit_uri": {
-                          "type": "string",
-                          "format": "uri"
-                        },
-                        "resolution_unit_name": {
-                          "type": "string"
-                        }
-                      }
-                    },
-                    "type": {
-                      "type": "string"
-                    }
-                  },
-                  "example": {
-                    "attributes": {
-                      "measuring_range_min": 0,
-                      "measuring_range_max": 0,
-                      "failure_value": 0,
-                      "accuracy": 0,
-                      "label": "",
-                      "unit_uri": "",
-                      "unit_name": "",
-                      "compartment_uri": "",
-                      "compartment_name": "",
-                      "property_uri": "",
-                      "property_name": "",
-                      "sampling_media_uri": "",
-                      "sampling_media_name": "",
-                      "resolution": 0,
-                      "resolution_unit_uri": "",
-                      "resolution_unit_name": ""
-                    },
-                    "type": "device_property",
-                    "relationships": {
-                      "device": {
-                        "data": {
-                          "type": "device",
-                          "id": "0"
-                        }
-                      }
-                    }
-                  }
-                }
-              },
-              "description": "DeviceProperty post;"
-            }
-          }
-        }
-      },
       "Device_inst": {
         "content": {
           "application/vnd.api+json": {
@@ -3952,115 +3543,6 @@
             }
           }
         }
-      },
-      "DeviceProperty": {
-        "properties": {
-          "data": {
-            "type": "object",
-            "properties": {
-              "attributes": {
-                "type": "object",
-                "properties": {
-                  "measuring_range_min": {
-                    "type": "integer",
-                    "format": "int64"
-                  },
-                  "measuring_range_max": {
-                    "type": "integer",
-                    "format": "int64"
-                  },
-                  "failure_value": {
-                    "type": "integer",
-                    "format": "int64"
-                  },
-                  "accuracy": {
-                    "type": "integer",
-                    "format": "int64"
-                  },
-                  "resolution": {
-                    "type": "integer",
-                    "format": "int64"
-                  },
-                  "label": {
-                    "type": "string"
-                  },
-                  "unit_uri": {
-                    "type": "string",
-                    "format": "uri"
-                  },
-                  "unit_name": {
-                    "type": "string"
-                  },
-                  "compartment_uri": {
-                    "type": "string",
-                    "format": "uri"
-                  },
-                  "compartment_name": {
-                    "type": "string"
-                  },
-                  "property_uri": {
-                    "type": "string",
-                    "format": "uri"
-                  },
-                  "property_name": {
-                    "type": "string"
-                  },
-                  "sampling_media_uri": {
-                    "type": "string",
-                    "format": "uri"
-                  },
-                  "sampling_media_name": {
-                    "type": "string"
-                  },
-                  "resolution_unit_uri": {
-                    "type": "string",
-                    "format": "uri"
-                  },
-                  "resolution_unit_name": {
-                    "type": "string"
-                  }
-                }
-              },
-              "type": {
-                "type": "string"
-              },
-              "id": {
-                "type": "string"
-              }
-            },
-            "example": {
-              "attributes": {
-                "measuring_range_min": 0,
-                "measuring_range_max": 0,
-                "failure_value": 0,
-                "accuracy": 0,
-                "label": "",
-                "unit_uri": "",
-                "unit_name": "",
-                "compartment_uri": "",
-                "compartment_name": "",
-                "property_uri": "",
-                "property_name": "",
-                "sampling_media_uri": "",
-                "sampling_media_name": "",
-                "resolution": 0,
-                "resolution_unit_uri": "",
-                "resolution_unit_name": ""
-              },
-              "type": "device_property",
-              "id": "0",
-              "relationships": {
-                "device": {
-                  "data": {
-                    "type": "device",
-                    "id": "0"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "description": "DeviceProperty post;"
       },
       "Platform": {
         "properties": {
@@ -5515,52 +4997,6 @@
         },
         "description": "Device"
       },
-      "DeviceProperty_coll1": {
-        "content": {
-          "application/vnd.api+json": {
-            "schema": {
-              "properties": {
-                "data": {
-                  "type": "object",
-                  "properties": {},
-                  "example": {
-                    "attributes": {
-                      "measuring_range_min": 0,
-                      "measuring_range_max": 0,
-                      "failure_value": 0,
-                      "accuracy": 0,
-                      "label": "",
-                      "unit_uri": "",
-                      "unit_name": "",
-                      "compartment_uri": "",
-                      "compartment_name": "",
-                      "property_uri": "",
-                      "property_name": "",
-                      "sampling_media_uri": "",
-                      "sampling_media_name": "",
-                      "resolution": 0,
-                      "resolution_unit_uri": "",
-                      "resolution_unit_name": ""
-                    },
-                    "type": "device_property",
-                    "id": "0",
-                    "relationships": {
-                      "device": {
-                        "data": null,
-                        "links": {
-                          "self": null
-                        }
-                      }
-                    }
-                  }
-                }
-              },
-              "description": "DeviceProperty get;"
-            }
-          }
-        },
-        "description": "Device Property"
-      },
       "Platform_coll": {
         "content": {
           "application/vnd.api+json": {
@@ -6212,14 +5648,6 @@
           "type": "string",
           "format": "string",
           "default": ""
-        }
-      },
-      "device_property_id": {
-        "name": "device_property_id",
-        "in": "path",
-        "required": true,
-        "schema": {
-          "type": "string"
         }
       },
       "generic_configuration_action_id": {
